add_library(llvm_test_interface INTERFACE)
target_compile_definitions(llvm_test_interface INTERFACE IGNORE_LIBCPP_SPECIFIC_BEHAVIOR)
target_include_directories(llvm_test_interface INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/support)
target_link_libraries(llvm_test_interface INTERFACE common_interface)

add_subdirectory(std/containers/)
